--- a/src/index.html
+++ b/src/index.html
@@ -9,12 +9,13 @@
   <body>
     <form class="search-form" id="search-form">
       <input
+        class="search-form_input"
         type="text"
         name="searchQuery"
         autocomplete="off"
         placeholder="Search images..."
       />
-      <button type="submit">Search</button>
+      <button type="submit" class="submit-button">Search</button>
     </form>
     <div class="gallery">
       <!-- Картки зображень -->
